<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="#ffffff"
        android:layout_alignParentTop="true"
        >
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:src="@drawable/icon_back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="22sp"
            android:textColor="#505050"
            android:layout_marginStart="52dp"
            android:text="@string/settings_score"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#808080"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/rank_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_rank"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        />

    <TextView
        android:id="@+id/rank_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/brown"
        android:textSize="22sp"
        android:layout_toRightOf="@id/rank_title"
        android:layout_alignTop="@id/rank_title"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id="@+id/adward_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_award"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/rank_title"
        />

    <ImageView
        android:id="@+id/adward_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_toRightOf="@id/adward_title"
        android:layout_alignTop="@id/adward_title"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/rank_title"/>

</RelativeLayout>
