<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightgray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="#ffffff"
        >
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:src="@drawable/icon_back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="22sp"
            android:textColor="#505050"
            android:layout_marginStart="52dp"
            android:text="@string/settings_title"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#808080"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_rank"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="?android:attr/selectableItemBackground"
        >
        <ImageView
            android:id="@+id/rank_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/icon_settings_rank"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_score"
            android:layout_toRightOf="@id/rank_image"
            android:textColor="#505050"
            android:textSize="22sp"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/placeview_right"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#505050"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/settings_feedback"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="?android:attr/selectableItemBackground"
        >
        <ImageView
            android:id="@+id/feedback_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/icon_settings_feedback"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_feedback"
            android:layout_toRightOf="@id/feedback_image"
            android:textColor="#505050"
            android:textSize="22sp"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/placeview_right"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#505050"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_about"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="?android:attr/selectableItemBackground"
        >
        <ImageView
            android:id="@+id/about_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/icon_settings_about"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_about"
            android:layout_toRightOf="@id/about_image"
            android:textColor="#505050"
            android:textSize="22sp"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/placeview_right"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#505050"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_recommend"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="?android:attr/selectableItemBackground"
        android:visibility="gone"
        >
        <ImageView
            android:id="@+id/recommend_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/icon_recommend"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_recommend"
            android:layout_toRightOf="@id/recommend_image"
            android:textColor="#505050"
            android:textSize="22sp"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/placeview_right"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#505050"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
</LinearLayout>
